# prime-breakdown

./: .gitignore  CMakeLists.txt  PrimeBreakdownConfig.h  PrimeBreakdownConfig.h.in  README.md  main.cpp
inc/: cli.h  prime_breakdown_core.h  prime_breakdown_processor.h
include/: CMakeLists.txt
res/: ui.glade
src/: CMakeLists.txt  cli.cpp  main.cpp  prime_breakdown_core.cpp  prime_breakdown_processor.cpp
